# EvoRegr--

./: .$EVOR_island_data_scheme.drawio.bkp  .gitignore  CMakeLists.txt  EVOR_island_data_scheme.drawio  README.md  main.cpp
data/: TestDataEfficiency.csv  TestDataNozzleWeight.csv  TestDataRKWeight.csv  TestDataSpan.csv  TestDataWeight.csv
include/: BoundaryConditions.hpp  CMakeLists.txt  CustomCaches.hpp  EExpression.hpp  EvoAPI.hpp  EvoCache.hpp  EvoCore.hpp  EvoDataSet.hpp  EvoGene.hpp  EvoGui.hpp  EvoIndividual.hpp  EvoLibrary.hpp  EvoPopulation.hpp  EvoResultPostProcessing.hpp  IEvoAPI.hpp  IOTools.hpp  LRUCache.hpp  Log.hpp  Plotter.hpp  RandomChoices.hpp  RandomNumberGenerator.hpp  RegressionSolver.hpp  Stats.hpp  Timer.hpp  emptyfile.cpp
logs/: EvoAPI_log.txt
src/: CMakeLists.txt  CustomCaches.cpp  EvoAPI.cpp  EvoCache.cpp  EvoCore.cpp  EvoGene.cpp  EvoGui.cpp  EvoIndividual.cpp  EvoLibrary.cpp  EvoPopulation.cpp  EvoResultPostProcessing.cpp  IOTools.cpp  Log.cpp  Plotter.cpp  RandomNumberGenerator.cpp  RegressionSolver.cpp  Stats.cpp
test/: CMakeLists.txt  benchmark.cpp
